after merge - animation of photos improved to prevent horizontal scrolling of the site

--- a/style.css
+++ b/style.css
@@ -260,21 +260,20 @@ input[type=submit]:hover {
     height: 150px;
     width: 150px;
     opacity: 0.0;
-    transition: transform 1500ms ease, opacity 1500ms ease;
+    transition: transform 2000ms ease, opacity 1500ms ease;
 }
 .img-circle.left {
-    transform: translate3d(-150%,0,0);
+    transform: scale(1) translate3d(-50%,0,0);
 }
 .img-circle.center {
-    transform: translate3d(0,150%,0);
+    transform: scale(1) translate3d(0,50%,0);
 }
 .img-circle.right {
-    transform: translate3d(150%,0,0);
+    transform: scale(1) translate3d(50%,0,0);
 }
-
 .img-circle.active {
     opacity: 1.0;
-    transform: translate3d(0,0,0);
+    transform: scale(1) translate3d(0,0,0);
 }
 
 h5 {
